--- a/src/main/resources/assets/roses/lang/en_us.json
+++ b/src/main/resources/assets/roses/lang/en_us.json
@@ -1,4 +1,8 @@
 {
+	// ITEM GROUPS
+	"itemGroup.roses.roses_tab": "Roses Tab",
+	
+	// BLOCKS
 	"block.roses.rose": "Rose",
 	"block.roses.cyan_flower": "Cyan Flower",
 	"block.roses.capri_cloth": "Capri Cloth",
@@ -25,6 +29,14 @@
 	"block.roses.dark_oak_chair": "Dark Oak Chair",
 	"block.roses.crimson_chair": "Crimson Chair",
 	"block.roses.warped_chair": "Warped Chair",
+	"block.roses.ruby_block": "Block of Ruby",
+	"block.roses.ruby_ore": "Ruby Ore",
+	"block.roses.deepslate_ruby_ore": "Deepslate Ruby Ore",
+	
+	// ITEMS
+	"item.roses.ruby": "Ruby",
+	
+	// ADVANCEMENTS
 	"advancements.roses.legacy.root.title": "Legacy Player",
 	"advancements.roses.legacy.root.description": "You've got nostalgia for the rose."
 }
